network-policy/api-db-egress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-db-egress-network-policy
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app: api
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: db
    ports:
      - port: 3306
        protocol: TCP
  policyTypes:
  - Egress
