network-policy/api-ingress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-ingress-network-policy
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app: api
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
      - port: 5500
        protocol: TCP
