network-policy/deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-by-default
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app: ui-todo
  ingress: []
