network-policy/ui-ingress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ui-ingress-network-policy
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app: ui-todo
  ingress:
  - ports:
    - port: 80
      protocol: TCP
    from:
    - podSelector: {}
      namespaceSelector: {}
